--- a/index.html
+++ b/index.html
@@ -3,33 +3,52 @@
 <head>
   <meta charset="utf-8">
   <title>Stat Tracker</title>
+  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
   <script type="text/x-handlebars" data-template-name="teams">
-    <h2>Teams</h2>
-      <ul id="team-list">
-        {{#each}}
-          <li>
-            {{name}}
-          </li>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3">
+          <table class="table">
+            <thead>
+              <tr><th>Teams</th></tr>
+            </thead>
+            {{#each}}
+            <tr><td>
+              {{#link-to 'team' this}}
+                {{name}}
+              {{/link-to}}
+            </td></tr>
+            {{/each}}
+          </table>
+        </div>
+        <div class="span6">
+          {{outlet}}
+        </div>
+        <div class="span3">
+          <h2>Stats</h2>
+        </div>
+      </div>
+    </div>
+  </script>
+
+  <script type="text/x-handlebars" id="team">
+    <ul>
+       <h1>{{name}}</h1>
+        {{#each player in players}}
+          <li>{{player.name}}</li>
         {{/each}}
-      </ul>
-    {{outlet}}
+    </ul>
+
   </script>
 
   <script type="text/x-handlebars" id="newTeam">
    <h2>Add a team</h2>
    {{input type="text" id="new-team" placeholder="Add a team" value=newTeam action="createTeam"}}
-  </script>
-
-  <script type="text/x-handlebars" id="index">
-   /* <ul>
-    {{#each}}
-      <li>{{player}}</li>
-    {{/each}}
-    </ul> */
   </script>
 
   <script src="js/libs/jquery-1.10.2.js"></script>
@@ -40,6 +59,7 @@
   <script src="js/app.js"></script>
   <script src="js/router.js"></script>
   <script src="js/models/team.js"></script>
+  <script src="js/models/player.js"></script>
 
 
   <!-- to activate the test runner, add the "?test" query string parameter -->
