--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>Stat Tracker</title>
-  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -40,7 +39,11 @@
     <ul>
        <h1>{{name}}</h1>
         {{#each player in players}}
-          <li>{{player.name}}</li>
+          <li>
+            {{#link-to 'player' this.player}}
+              {{player.name}}
+            {{/link-to}}
+          </li>
         {{/each}}
     </ul>
 
@@ -49,6 +52,11 @@
   <script type="text/x-handlebars" id="newTeam">
    <h2>Add a team</h2>
    {{input type="text" id="new-team" placeholder="Add a team" value=newTeam action="createTeam"}}
+  </script>
+
+  <script type="text/x-handlebars" id="newPlayer">
+   <h2>Add a Player</h2>
+   {{input type="text" id="new-player" placeholder="Add a Player" value=newTeam action="createPlayer"}}
   </script>
 
   <script src="js/libs/jquery-1.10.2.js"></script>
@@ -60,6 +68,7 @@
   <script src="js/router.js"></script>
   <script src="js/models/team.js"></script>
   <script src="js/models/player.js"></script>
+  <script src="js/models/stat.js"></script>
 
 
   <!-- to activate the test runner, add the "?test" query string parameter -->
